Fix map overflow

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -313,8 +313,18 @@ h4, h5{
   padding: 30px 20px 25vh 30px;
   margin-bottom: -25vh;
 }
+.wrapperName{
+  height: calc(100vh - 141px);
+  top: 98px;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  position: absolute;
+  max-width: 500px;
+  margin: 0 auto;
+}
 .banner-header.map{
-  position: fixed;
+  /* position: fixed; */
     z-index: 1;
     width: 100%;
     height: 30px;
